# coding-with-kirby

./: .gitignore  LICENSE  README.md  big_kirby.py  big_kirby.spec  main.spec  pyproject.toml  requirements.txt
scripts/: smoke_headless.py
src/: main.py
src/core/: main_controller.py  tray_menu.py
src/dialogs/: ranking_board.py  stats_dialog.py
src/utils/: macos_window.py  particles.py  utils.py
src/widgets/: pet_widget.py  poop_widget.py  snack_widget.py  thought_bubble.py  transparent_snackbar.py
tests/: conftest.py  test_bugfixes.py  test_game_logic.py  test_physics.py  test_refactor_v240.py  test_utils.py
